# aibard_lmstudio

./: .gitignore  Justfile
frontend/: package.json
llmstory/: .env.example  .gitignore  CONFIGURATION.md  api.http  pyproject.toml
llmstory/src/llmstory/: LLMSession.py  __init__.py  di_config.py
llmstory/src/llmstory/routes/: __init__.py  api.py  website.py
llmstory/src/llmstory/services/: __init__.py  config_service.py  contact_service.py  health_service.py  llm_service.py  story_service.py
llmstory/src/llmstory/session/: LLMSession.py  __init__.py
llmstory/src/llmstory/static/css/: style.css
llmstory/src/llmstory/static/js/: main.js
llmstory/src/llmstory/templates/: about.html  base.html  contact.html  docs.html  index.html  portfolio.html
story/: .env  pyproject.toml
story/src/story/: LlmContext.py  __init__.py  __main__.py
story/src/story/cli/: __init__.py
