[project]
name = "llmstory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "humanize>=4.14.0",
    "lmstudio>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
llmstory = "llmstory:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
